--- a/src/components/Search/ResultItem/resultItem.scss
+++ b/src/components/Search/ResultItem/resultItem.scss
@@ -19,7 +19,9 @@
       display: flex;
       flex: 1 1 100%;
       justify-content: space-between;
-
+      .date {
+        margin-right: 10px;
+      }
       .url {
         text-transform: lowercase;
       }
