fix: styles for external links in search results

--- a/src/components/Search/ResultItem/resultItem.scss
+++ b/src/components/Search/ResultItem/resultItem.scss
@@ -39,6 +39,13 @@
   .card-title {
     font-weight: 600;
     font-size: 1.2rem;
+
+    a.with-external-link-icon {
+      display: inline;
+      .external-link.align-sub {
+        vertical-align: baseline;
+      }
+    }
   }
   .item-themes,
   .item-categories {
